[package]
name = "ov5640"
version = "0.1.0"
authors = ["Tobias Breitwieser <tobias@breitwieser.biz>", "Henrik Böving <hargonix@gmail.com>"]
edition = "2021"
keywords = ["ov5640", "camera", "embedded", "i2c", "embedded-hal"]
categories = ["embedded", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "1.0.0-rc.1"

[features]
